Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138555

webview2 can not create user data folder

XMLWordPrintable

    • Windows
    • 29271066d (dev), 0ce1886c2 (6.10)

      Report created on comment from QTBUG-75747.

      If the application is installed in a protected directory (like Program Files) fails to create user data folder

      WebView2 Warning: Using default User Data Folder is not recommended, please see documentation.  https://go.microsoft.com/fwlink/?linkid=2187341
      WebView2: CoreWebView2Environment failed to create the user data folder: error=
      Access is denied.
       path=
      

        For Gerrit Dashboard: QTBUG-138555
        # Subject Branch Project Status CR V

            michal Michal Klocek
            michal Michal Klocek
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes