Add default user data folder for initialization

Set the location which should be writable as user data folder.

Fixes: QTBUG-138555
Change-Id: Icaef9f732cd2d7c0d5b917dfefdf78347198d65c
Reviewed-by: Michael Brüning <michael.bruning@qt.io>
(cherry picked from commit 29271066d318edcc97b5dd31e73bee80f2185626)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>